tests/baselines/reference/implicitAnyInAmbientDeclaration.errors.txt
implicitAnyInAmbientDeclaration.ts(3,16): error TS7008: Member 'publicMember' implicitly has an 'any' type.
implicitAnyInAmbientDeclaration.ts(6,16): error TS7010: 'publicFunction', which lacks return-type annotation, implicitly has an 'any' return type.
implicitAnyInAmbientDeclaration.ts(6,31): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== implicitAnyInAmbientDeclaration.ts (3 errors) ====
    module Test {
        declare class C {
            public publicMember;  // this should be an error
                   ~~~~~~~~~~~~
!!! error TS7008: Member 'publicMember' implicitly has an 'any' type.
            private privateMember;  // this should not be an error
    
            public publicFunction(x);  // this should be an error
                   ~~~~~~~~~~~~~~
!!! error TS7010: 'publicFunction', which lacks return-type annotation, implicitly has an 'any' return type.
                                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
            private privateFunction(privateParam);  // this should not be an error
            private constructor(privateParam);
        }
    }